2003-01-03  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Default value of BUILD_CXX is $CXX, not g++.
	(AH_BOTTOM): Define __USE_STD_IOSTREAM if using Compaq C++ compiler.
	For compiler/linker options, use -Wl,OPT instead of -Xlinker OPT.

2003-01-02  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Fail on all gcc 1.x and 2.x versions.

2002-12-30  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (OCTAVE_LOCAL_BUFFER): New macro.

2002-12-18  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* mkoctfile.in: Include $LIBOCTINTERP in the stand alone link command.
	Define LIBOCTAVE, LIBOCTINTERP, LIBCRUFT, LIBREADLINE using -lLIB.

2002-12-17  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in (do-script-install, do-script-uninstall):
	New macros, used in Makefiles in scripts subdirectory.
	(do-script-install): Use new scripts/mkpkgadd script to construct
	PKG_ADD files.

2002-12-03  Nix  <nix@esperi.demon.co.uk>

	* configure.in: Use AC_CHECK_DECL in conjunction with
        AC_DECL_SYS_SIGLIST to ensure signal.h is searched.

2002-12-03  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Dont't set SONAME_FLAGS for alpha alpha*-dec-osf*
	systems.

2002-11-29  Paul Kienzle <pkienzle@users.sf.net>

	* mkoctfile.in: Include "$incflags $def" in commands to generate
	dependecies.

2002-11-21  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (do-subst-config-vals): Substitute OCTAVE_BINDIR.

	* configure.in (MKOCTFILE_SH_LDFLAGS): New variable.
	* Makeconf.in (do-subst-config-vals): Substitute
	OCTAVE_CONF version of this variable.

	* mkoctfile.in: Set SH_LDFLAGS from MKOCTFILE_SH_LDFLAGS, not
	SH_LDFLAGS.
	(VERSION): Substitute value of OCTAVE_CONF_VERSION.

	* configure.in (NO_OCT_FILE_STRIP): New variable.
	* Makeconf.in (do-subst-config-vals): Substitute it.
	* mkoctfile.in (no_oct_file_strip_on_this_platform): New variable.

2002-11-20  John W. Eaton  <jwe@bevo.che.wisc.edu>
