@@ -1,3 +1,8 @@
+2003-01-04  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
+	* sysdep.cc [__DECCXX]: Add a kluge for some missing template
+	functions.
+
 2003-01-03  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* ov-usr-fcn.cc (octave_vr_val): Assert vr_list != 0, not vr_list.
