@@ -1,8 +1,14 @@
+2003-01-04  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
+	* configure.in (BUILD_CC, BUILD_CFLAGS, BUILD_CXX,
+	BUILD_CXXFLAGS): Kluge for Sun C/C++.
+
 2003-01-03  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* configure.in: Default value of BUILD_CXX is $CXX, not g++.
 	(AH_BOTTOM): Define __USE_STD_IOSTREAM if using Compaq C++ compiler.
 	For compiler/linker options, use -Wl,OPT instead of -Xlinker OPT.
+	Check for -ieee option for the C and C++ compilers on alpha systems.
 
 2003-01-02  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
